web-api/src/main/webapp/console/css/console.css
/* ... */
#workflow_view .node.active {
  border: 1px dotted green;
}
#workflow_view .node.hover {
  border: 1px dotted blue;
}
#workflow_view .node.jsPlumb_dragged {
  cursor: move;
}
#workflow_view .link {
  z-index: 4;
  cursor: pointer;
}
#workflow_view .link.hover,
#workflow_view .link:hover {
  z-index: 10;
}
#workflow_view .endpoint {
  z-index: 22;
  cursor: move;
}
#workflow_view .endpoint:after {
  position: absolute;
  visibility: hidden;
  content: ' ';
  padding: 30px;
}
#workflow_view .link-label {
  background-color: #fff;
  padding: 0.4em;
  font: 12px sans-serif;
  color: #444;
  z-index: 21;
  border: 1px dotted #999;
  opacity: 0.8;
  cursor: pointer;
}
#workflow_view .popover-buttons {
  min-width: 125px;
  overflow: hidden;
  margin: 10px 0 5px;
  text-align: right;
}
#workflow_header {
  display: inline-block;
  cursor: pointer;
}
#node_editor {
  min-width: 600px;
}
#node_editor form.form-horizontal {
  display: block;
  margin-bottom: 0;
}
#node_editor form.form-horizontal .control-group {
  display: inline-block;
  vertical-align: top;
  margin-bottom: 10px;
}
#node_editor form.form-horizontal .control-label {
  width: 80px;
}
#node_editor form.form-horizontal .controls {
  margin-left: 90px;
}
#node_editor .node-actions {
  position: absolute;
  top: 100px;
  left: 200px;
  right: 10px;
  bottom: 13px;
  padding: 0;
  margin-bottom: 0;
  overflow-y: auto;
}
#node_editor .action.box .box-header {
  cursor: move;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
#node_editor .action.box form.box-content {
  margin: 0;
}
#node_editor .action.box form.box-content > * {
  margin-bottom: 10px;
}
#node_editor #too_many_actions_alert {
  margin: 0;
  margin-top: -10px;
  height: 0;
  opacity: 0;
  padding: 0;
  border: none;
  -webkit-transition: opacity 0.5s ease-in-out 0;
  -moz-transition: opacity 0.5s ease-in-out 0;
  transition: opacity 0.5s ease-in-out 0;
}
#node_editor #too_many_actions_alert.active {
  margin-top: 0;
  height: auto;
  opacity: 1;
  padding: 8px 35px 8px 14px;
  border: 1px solid #fbeed5;
}
#project_editor .sidebar {
  left: -200px;
  opacity: 0;
  -webkit-transition: all 0.5s ease-in-out 0;
  -moz-transition: all 0.5s ease-in-out 0;
  transition: all 0.5s ease-in-out 0;
}
#project_editor .sidebar.active {
  left: 0;
  opacity: 1;
}
#project_editor .sidebar li.sidebar-item > a {
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  vertical-align: middle;
}
#project_editor #wf_preview {
  height: 150px;
  margin-bottom: 10px;
}
div[data-role="editor-toolbar"] {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
div[data-role="editor-toolbar"] .btn {
  margin: 0;
  padding: 3px 5px;
}
div[data-role="editor-toolbar"] .rich-editor,
div[data-role="editor-toolbar"] .rich-editor-html {
  margin: 5px 0 0 0;
  -webkit-user-select: all;
  -moz-user-select: all;
  user-select: all;
  font-size: medium;
  padding: 4px;
}
div[data-role="editor-toolbar"] .rich-editor {
  height: 150px;
  max-height: 150px;
  background-color: #fff;
  border-collapse: separate;
  border: 1px solid #ccc;
  box-sizing: content-box;
  -webkit-box-shadow: rgba(0, 0, 0, 0.075) 0 1px 1px 0 inset;
  box-shadow: rgba(0, 0, 0, 0.075) 0 1px 1px 0 inset;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
  overflow: auto;
  outline: none;
}
div[data-role="editor-toolbar"] .rich-editor-html {
  height: 160px;
  display: none;
  background-color: #ffe;
}
div[data-role="editor-toolbar"] ::-webkit-file-upload-button {
  cursor: pointer;
}
#page_designer article {
  max-width: 1000px;
  min-width: 600px;
  margin: 0 auto;
}
#page_designer .section.box .box-header {
  cursor: move;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
#page_designer .section.box .box-content {
  background: #fff;
}
#page_designer li.manual_option {
  line-height: 30px;
  list-style: none;
}
#page_designer li.manual_option .close {
  float: none;
  cursor: pointer;
}
#page_designer li.manual_option .fake-radio,
#page_designer li.manual_option .fake-checkbox {
  color: #aaa;
}
#page_designer li.manual_option .fake-radio:before {
  content: '\25CB';
  font-size: 32px;
  line-height: 32px;
  vertical-align: middle;
}
#page_designer li.manual_option .fake-checkbox:before {
  content: '\25A1';
  font-size: 26px;
  line-height: 32px;
  vertical-align: middle;
}
#page_designer li.manual_option .manual_option_text {
  cursor: text;
  margin: 0 5px;
}
#page_designer li.manual_option .new + .close {
  display: none;
}
#page_designer li.manual_option .error {
  color: #b94a48;
  border-color: #b94a48;
  outline-color: #b94a48;
}
#page_designer #new_section {
  display: block;
  font-size: 32px;
  margin: 10px 47%;
  width: 48px;
  height: 48px;
  line-height: 32px;
  text-align: center;
}
#page_designer .preview {
  margin: 0 20%;
  padding: 5px 5% 15px 5%;
}
#page_designer .preview legend:after {
  float: right;
  content: 'Preview';
  font-size: 11pt;
  color: #999;
}
#page_designer .preview .preview-desc {
  margin: 10px 0;
}
#page_designer iframe {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background: #fff;
  border: none;
  margin: 0;
}
#page_designer iframe.active {
  display: block;
}
#page_designer iframe.active + article {
  display: none;
}
/*!
 * FullCalendar v1.6.3 Stylesheet (w/o IE hack)
 * Docs & License: http://arshaw.com/fullcalendar/
 * (c) 2013 Adam Shaw
 */
.fc {
  direction: ltr;
  text-align: left;
}
.fc table {
  border-collapse: collapse;
  border-spacing: 0;
}
html .fc,
.fc table {
  font-size: 1em;
}
.fc td,
.fc th {
  padding: 0;
  vertical-align: top;
}
.fc-header td {
  white-space: nowrap;
}
.fc-header-left {
  width: 25%;
  text-align: left;
}
.fc-header-center {
  text-align: center;
}
/* ... */

